# rag

./: .gitignore  README.md  docker-compose.yml  main.py  requirements.txt  schemas.py
LLM/: OpenAi.py
MCP/: server.py
backend/: pyproject.toml  seed.py
backend/app/: __init__.py  config.py  routes.py
backend/app/chat/: controllers.py  models.py  services.py
backend/app/chat/agent/MCP/: client.py  server.py
backend/app/chat/agent/utils/: Executor.py  PlannerAgent.py  composio_tools.py  debugging.ipynb  formaters.py  prompts.py  schemas.py
backend/app/chat/agent/utils/.ipynb_checkpoints/: debugging-checkpoint.ipynb
backend/app/chat/agent/utils/embedding_responses/: ballerina.pkl  final destination bloodlines.pkl  heretic.pkl  longlegs.pkl  sinners.pkl  smile2.pkl  superman.pkl
backend/app/chat/agent/utils/embeddings/: 28 years later.pkl  drop.pkl  nosferatu.pkl
backend/app/chat/utils/: OpenAIClient.py  composio_tools.py  formaters.py  prompts.py  schemas.py
backend/app/chat/utils/data/: movies.csv
backend/app/chat/utils/embeddings/: bring herback.pkl  companion.pkl  death of a unicorn.pkl  weapons.pkl
backend/app/user/: controllers.py
backend/migrations/versions/: 779df091e520_add_documents_table_with_embeddings.py  8322353e76e5_new_tables.py  f9595e5a9a96_changed_documents_table_to_movies.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  users.ts
frontend/src/components/: EditProfile.tsx  PrivateRoute.tsx  UserProfile.tsx
mcp_server_client/: client.py  server.py
(+15 files in other folders)
